--- a/thelounge-theme-flat-blue/theme.css
+++ b/thelounge-theme-flat-blue/theme.css
@@ -1,8 +1,10 @@
 /*!
- * A simple flat theme with blue colours
+ * A simple flat theme with dark colours
  * By aab12345
  *
  * License: MIT
+ * Compatible with The Lounge 4.2.0/4.3.0
+ * Last Updated: 21/10/2021
  */
 
 /* Samsung Internet and Microsoft Edge (yes, both of them use -webkit- prefix) */
@@ -21,17 +23,50 @@ form.message-search .input-wrapper input {
     color: #b7c5cc;
 }
 
-/* New 4.3.0 fixes round, square jumpy search */
-input[type="search"] {
-  -webkit-appearance: none;
+/* Chat message input box */
+#form {
+  background: var(--chat-background);
+  border-top: 0;
+  padding: 10px;
+  margin: 0 10px 10px 10px; }
+
+#form::before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: #003366;
+    content: ' ';
+    z-index: 1;
+    border-radius: 10px; }
+
+#form * {
+    z-index: 1; 
 }
+
+#form #input {
+    background: transparent;
+    height: 25px;
+    line-height: 25px;
+    margin: 0;
+    padding: 0px 10px;
+    color: var(--off-white); }
+    #form #input::placeholder {
+      color: rgba(var(--off-white), 0.5); 
+}
+
+#form #submit, #form #upload {
+    color: #abb8c9; 
+}
+
 
 :root {
 	--body-bg-color: #1c5780;
 	--window-bg-color: #1c5780;
 	--body-color: #fff;
 	--body-color-muted: #b7c5d1;
-	--link-color: #268bd2;
+	--link-color: #003366;
 	--unread-marker-color: #268bd2;
 	--date-marker-color: #edf10a;
 	--highlight-bg-color: #4d88b1;
@@ -225,6 +260,19 @@ body {
 	border: 0;
 	color: var(--body-color);
 }
+
+#chat .userlist .user-mode::before {
+    background: transparent;
+    color: #ffffff;
+    background: #003366;
+    margin-right: auto;
+    border-radius: 999px;
+    display: inline-block;
+    padding: 0 8px;
+    margin-left: 16px;
+    margin-bottom: 4px;
+}
+
 
 #chat.colored-nicks .user.color-1,
 #chat.colored-nicks .user.color-17 {
