--- a/thelounge-theme-flat-blue/theme.css
+++ b/thelounge-theme-flat-blue/theme.css
@@ -28,38 +28,8 @@ form.message-search .input-wrapper input {
   background: var(--chat-background);
   border-top: 0;
   padding: 10px;
-  margin: 0 10px 10px 10px; }
-
-#form::before {
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    background: #003366;
-    content: ' ';
-    z-index: 1;
-    border-radius: 10px; }
-
-#form * {
-    z-index: 1; 
+  margin: 0 10px 10px 10px; 
 }
-
-#form #input {
-    background: transparent;
-    height: 25px;
-    line-height: 25px;
-    margin: 0;
-    padding: 0px 10px;
-    color: var(--off-white); }
-    #form #input::placeholder {
-      color: rgba(var(--off-white), 0.5); 
-}
-
-#form #submit, #form #upload {
-    color: #abb8c9; 
-}
-
 
 :root {
 	--body-bg-color: #1c5780;
@@ -260,19 +230,6 @@ body {
 	border: 0;
 	color: var(--body-color);
 }
-
-#chat .userlist .user-mode::before {
-    background: transparent;
-    color: #ffffff;
-    background: #003366;
-    margin-right: auto;
-    border-radius: 999px;
-    display: inline-block;
-    padding: 0 8px;
-    margin-left: 16px;
-    margin-bottom: 4px;
-}
-
 
 #chat.colored-nicks .user.color-1,
 #chat.colored-nicks .user.color-17 {
