--- a/thelounge-theme-flat-blue/theme.css
+++ b/thelounge-theme-flat-blue/theme.css
@@ -25,7 +25,7 @@ form.message-search .input-wrapper input {
 
 /* Fixes 4.3.0 Userlist overlay issue */
 #chat .msg {
-    position:static !important;
+    position: sticky;
 }
 
 /* Chat message input box */
@@ -228,6 +228,7 @@ body {
 #chat .content,
 #chat .userlist {
 	border-color: var(--background-light-color);
+	position: sticky;
 }
 
 #chat .userlist .search,
