--- a/thelounge-theme-flat-blue/theme.css
+++ b/thelounge-theme-flat-blue/theme.css
@@ -4,7 +4,7 @@
  *
  * License: MIT
  * Compatible with The Lounge 4.2.0 / 4.3.0
- * Last Updated: 23/10/2021
+ * Last Updated: 24/10/2021
  */
 
 /* Samsung Internet and Microsoft Edge (yes, both of them use -webkit- prefix) */
@@ -47,6 +47,14 @@ input[type=search] {
 #version-checker.up-to-date {
     background-color: #003366;
     color: #ffffff;
+}
+
+/* Display action messages in italics */
+#chat .msg[data-type="action"] .from::before,
+#chat .msg[data-type="action"] .from,
+#chat .msg[data-type="action"] .content,
+#chat .msg[data-type="action"] .user {
+	font-style: italic;
 }
 
 :root {
