--- a/thelounge-theme-flat-blue/theme.css
+++ b/thelounge-theme-flat-blue/theme.css
@@ -3,8 +3,8 @@
  * By aab12345
  *
  * License: MIT
- * Compatible with The Lounge 4.2.0 / 4.3.0
- * Last Updated: 24/10/2021
+ * Compatible with The Lounge 4.2.0 / 4.3.0 / 4.4.0
+ * Last Updated: 31/03/2023
  */
 
 /* Samsung Internet and Microsoft Edge (yes, both of them use -webkit- prefix) */
